--- a/CURSO/Proyectos_Composer/Proyecto1/composer.json
+++ b/CURSO/Proyectos_Composer/Proyecto1/composer.json
@@ -2,7 +2,8 @@
     "name": "daw_m/proyecto1",
     "autoload": {
         "psr-4": {
-            "DawM\\Proyecto1\\": "src/"
+            "DawM\\Proyecto1\\": "src/",
+            "DawM\\app\\": "app/"
         }
     },
     "authors": [
