--- a/CURSO/DAW/DOCKER/wordpress-docker/docker-compose.yml
+++ b/CURSO/DAW/DOCKER/wordpress-docker/docker-compose.yml
@@ -6,19 +6,20 @@ services:
     volumes:
       - data:/var/lib/mysql
     environment:
-      - MYSQL_ROOT_PASSWORD-secret
-      - MYSQL_DATABASE-wordpress
-      - MYSQL_USER-manager
-      - MYSQL_ROOT_PASSWORD-secret
+      MYSQL_ROOT_PASSWORD: secret
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: manager
+      MYSQL_PASSWORD: secret
   web:
     image: wordpress:4.9.8
-    depends_on: -db
+    depends_on:
+      - db
     volumes:
       - ./target:/var/www/html
     environment:
-      - WORDPRESS_DB_USER-manager
-      - WORDPRESS_DB_PASSWORD-secret
-      - WORDPRESS_DB_HOST-db
+      WORDPRESS_DB_USER: manager
+      WORDPRESS_DB_PASSWORD: secret
+      WORDPRESS_DB_HOST: db
     ports:
       - 8080:80
 volumes:
