--- a/CURSO/Proyectos_Composer/ProyectoPruebas/composer.json
+++ b/CURSO/Proyectos_Composer/ProyectoPruebas/composer.json
@@ -3,7 +3,8 @@
     "autoload": {
         "psr-4": {
             "DawM\\Proyecto1\\": "src/",
-            "DawM\\app\\": "app/"
+            "DawM\\app\\": "app/",
+            "DawM\\EjemploFactory\\util": "util/"
         }
     },
     "authors": [
