Update y terminado ProyectoVideoClubMonolog

--- a/CURSO/DWES/PHP/TEMA3_POO/ProyectoVideoClubMonolog/composer.json
+++ b/CURSO/DWES/PHP/TEMA3_POO/ProyectoVideoClubMonolog/composer.json
@@ -2,7 +2,8 @@
     "name": "daw_m/proyecto-video-club-monolog",
     "autoload": {
         "psr-4": {
-            "DawM\\ProyectoVideoClubMonolog\\": "src/"
+            "DawM\\ProyectoVideoClubMonolog\\": "src/",
+            "DawM\\util\\": "util/"
         }
     },
     "authors": [
