--- a/CURSO/DWEC/ANGULAR/loginJWT/angular.json
+++ b/CURSO/DWEC/ANGULAR/loginJWT/angular.json
@@ -3,9 +3,34 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "listadoPersonasStandalone": {
+    "loginJWT": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:class": {
+          "skipTests": true
+        },
+        "@schematics/angular:component": {
+          "skipTests": true
+        },
+        "@schematics/angular:directive": {
+          "skipTests": true
+        },
+        "@schematics/angular:guard": {
+          "skipTests": true
+        },
+        "@schematics/angular:interceptor": {
+          "skipTests": true
+        },
+        "@schematics/angular:pipe": {
+          "skipTests": true
+        },
+        "@schematics/angular:resolver": {
+          "skipTests": true
+        },
+        "@schematics/angular:service": {
+          "skipTests": true
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -13,13 +38,12 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/listado-personas-standalone",
+            "outputPath": "dist/login-jwt",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
-            "baseHref": "./",
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
@@ -60,10 +84,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "listadoPersonasStandalone:build:production"
+              "buildTarget": "loginJWT:build:production"
             },
             "development": {
-              "buildTarget": "listadoPersonasStandalone:build:development"
+              "buildTarget": "loginJWT:build:development"
             }
           },
           "defaultConfiguration": "development"
